<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:gravity="center"
        >
    <ImageView
            android:contentDescription="@string/image_view_logo"
            android:layout_width="120dp"
            android:layout_height="120dp" app:srcCompat="@drawable/logo" android:id="@+id/imageViewLogo"/>
    <TextView
            android:text="@string/text_view_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textViewTitulo"
            android:textColor="@color/colorNegro" android:gravity="center" android:textSize="20sp"
            android:layout_marginBottom="50dp"/>
    <TextView
            android:text="@string/text_view_iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:id="@+id/textViewIniciarSesion"
            app:layout_constraintBottom_toTopOf="@+id/txtCorreo" android:layout_marginBottom="22dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textSize="30sp" android:textColor="@color/colorNegro" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtCorreo" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/txtContrasena" android:hint="@string/edit_text_email"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:backgroundTint="@color/colorPrimary"/>
    <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtContrasena"
            app:layout_constraintBottom_toTopOf="@+id/btnIngresar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="35dp"
            android:hint="@string/edit_text_contrasena"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:backgroundTint="@color/colorPrimary"/>
    <Button
            android:text="@string/button_ingresar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnIngresar" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRegistrarse" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/boton_redondeado"
            android:textColor="@color/colorBlanco"/>
    <Button
            android:text="@string/button_registrarse"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegistrarse"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:background="@drawable/boton_redondeado"
            android:textColor="@color/colorBlanco"/>

</LinearLayout>