<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IndexActivity">
    <TextView
            android:text="@string/bienvenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tvBienvenido"
            android:textColor="@color/colorNegro" android:textSize="25sp" android:gravity="center"
            tools:layout_editor_absoluteX="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="450dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/borde"
            android:gravity="center" android:id="@+id/linearLayout2">
        <Button
                android:onClick="agregarEmpleado"
                android:text="@string/agregar_empleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnAgregarEmpleado" android:layout_margin="20dp"
                android:background="@drawable/boton_redondeado" android:textColor="@color/colorBlanco"
                android:textStyle="bold"/>
        <Button
                android:onClick="listarEmpleados"
                android:text="@string/listar_empleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnListarEmpleados" android:layout_margin="20dp"
                android:background="@drawable/boton_redondeado" android:textColor="@color/colorBlanco"
                android:textStyle="bold"/>
        <Button
                android:onClick="cerrarSesion"
                android:text="@string/cerrar_sesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnCerrarSesion" android:layout_margin="20dp"
                android:background="@drawable/boton_redondeado" android:textColor="@color/colorBlanco"
                android:textStyle="bold"/>
        <Button
                android:onClick="salir"
                android:text="@string/salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnSalir" android:layout_margin="20dp"
                android:background="@drawable/boton_redondeado" android:textColor="@color/colorBlanco"
                android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>