<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:clickable="true"
              android:focusable="true"

              android:background="@drawable/borde" android:layout_marginBottom="10dp" android:layout_marginTop="5dp"
              android:layout_marginRight="2dp" android:layout_marginLeft="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/linearLayout">
        <ImageView
                android:contentDescription="@string/image_button_foto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/imagenpordefecto"
                android:id="@+id/imageViewEmpleado"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/edit_text_Apellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewApellido"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="56dp" app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="30sp" app:layout_constraintStart_toEndOf="@+id/textViewNombre"
                android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0"
                android:textColor="@color/colorNegro"/>
        <TextView
                android:text="@string/edit_text_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNombre"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imageViewEmpleado"
                android:layout_marginStart="24dp" android:layout_marginLeft="24dp"
                android:textSize="30sp" android:textColor="@color/colorNegro"/>
        <TextView
                android:text="@string/text_view_cargo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCargo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewNombre" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.111" app:layout_constraintStart_toEndOf="@+id/imageViewEmpleado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/edit_text_email"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCorreo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_weight="1" android:textColor="@color/colorNegro"
                android:layout_margin="8dp" android:gravity="center"/>
        <TextView
                android:text="@string/edit_text_telefono"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTelefono"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_weight="1" android:textColor="@color/colorNegro"
                android:layout_margin="8dp" android:gravity="center"/>
    </LinearLayout>
</LinearLayout>